--- a/stylesheets/css/styles.css
+++ b/stylesheets/css/styles.css
@@ -1,3 +1,32 @@
-
+body {
+  font-family: "Aleo", serif;
+  background-color: NavajoWhite;
+}
+body h1 {
+  text-align: center;
+}
+body form {
+  width: 50%;
+  height: 450px;
+  margin: auto;
+  background-color: #fff;
+  text-align: center;
+  border-radius: 25px;
+}
+body form label {
+  font-size: 25px;
+}
+body form input {
+  padding: 10px;
+  margin-top: 10px;
+  margin-bottom: 15px;
+}
+body button {
+  padding: 15px;
+  border-radius: 5px;
+  border-style: none;
+  background-color: navajowhite;
+  color: #fff;
+}
 
 /*# sourceMappingURL=styles.css.map */
