--- a/public/stylesheets/sass/styles.scss
+++ b/public/stylesheets/sass/styles.scss
@@ -6,11 +6,13 @@ body {
     }
     form{
         width: 50%;
-        height: 450px;
+        height: auto;
+        padding: 2%;
         margin: auto;
         background-color: #fff;
         text-align: center;
         border-radius: 25px;
+        margin-bottom: 20px;
         label{
             font-size: 25px;
         }
@@ -21,11 +23,25 @@ body {
         }
     }
     button{
+        width: 25%;
         padding: 15px;
         border-radius: 5px;
         border-style: none;
         background-color: navajowhite;
         color: #fff;
+    }
+    table{
+        width: 70%;
+        padding: 2%;
+        margin: auto;
+        border-radius: 25px;
+        background-color: #fff;
+        button{
+            width: 100px;
+            padding: 15px;
+            border-radius: 5px;
+            border-style: none;
+        }
     }
 }
 
